--- a/style.css
+++ b/style.css
@@ -1,7 +1,79 @@
 body{
     background-color: rgb(243, 235, 225);
      margin: 0 auto 0 auto;
+}body.login{
+    background-color: #092756;
+     
 }
+
+
+   /*   Login  (https://www.loopnerd.com.br/codigos-css-prontos/pagina-de-login-html-e-css-pronta/) */
+.btn {
+    
+    width:106%;
+    padding: 0.6em 1em;
+    cursor: pointer;
+    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
+    text-decoration: none;
+    font-size:1.1em; 
+    color: #fff;
+    border-radius: 6px;
+    border: none; 
+}
+.zoom-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+}
+.zoom-shadow:hover, .zoom-shadow:focus, .zoom-shadow:active {
+  box-shadow: 0 13px 8px -8px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.02);
+  transform: scale(1.02);
+}
+.login { 
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ margin: -150px 0 0 -150px;
+ width:300px;
+ height:300px;
+}
+.login h1 { 
+font-family: 'Open Sans', sans-serif;
+ color:#fff; 
+ text-shadow: 0 0 10px rgba(0,0,0,0.3); 
+ letter-spacing:1px; 
+ text-align:center; 
+}
+input { 
+width: 100%;
+margin-bottom: 15px;
+background: rgb(255, 255, 255);
+border: none;
+outline:none;
+padding: 20px;
+font-size: 20px;
+color: #213b65;
+border-radius: 6px;
+transition: .5s;
+margin: 10px 10px 30px 0px;
+width: 95%;
+display: flex;
+}
+
+input:focus {
+    background-color: #f0f0f0; }
+
+ /* Login*/
 
 
 .cabecario{
@@ -14,9 +86,8 @@ font-size: 30px;
 font-family: Arial, Helvetica, sans-serif;
 height: 100px;
 padding-top: 10px;
-
-
 }
+
 .cabecario2{
     text-align: center;
     font-size: 20px;
@@ -30,34 +101,36 @@ padding-top: 10px;
     text-align: center;
     font-size: 20px;
     font-family: 'Lucida Sans';
-font-weight: 100px;
+    font-weight: 100px;
 
     color: aliceblue;
     background-color: rgb(207, 202, 163);
     border-radius: 10px;
-margin-right: 200px;
-margin-left: 200px;
+    margin-right: 200px;
+    margin-left: 200px;
 }
 
 #botoes{
-    background-color: blue;
-    color: aliceblue;
-    padding: 20px;
-    text-align: center;
-   margin: 50px;border-radius: 10px;
-   font-size: larger;
+   background-color: blue;
+   color: aliceblue;
+   padding: 20px;
+   text-align: center;
+   margin: 50px;
+   border-radius: 10px;
+   font-size: 20px;
 
 }
 
 #cod-entrada{
 background-color: rgb(40, 40, 92);
-padding: 90px;
+padding: 20px;
 color: aliceblue;
 }
 
 #tabela-cod{
 background-color: aliceblue;
-padding-block-end: 50px;
+width: 100%;
+right: 60%;
 color: black;
 border-radius: 20px;
 }
@@ -69,17 +142,34 @@ border-radius: 20px;
 }
 
 #tabela-forms{
-container-type: center;
-background-color: azure;
-padding-block-end: 50px;
+background-color: #9dbcdf;
+width: 170dvh;
 font-size: 25px;
-width: 80%; /* Ou qualquer outra largura */
 margin-top: 30px ;
-margin-left: 150px;
+margin-bottom: 20px;
 border-radius: 20px;
+margin-left: auto;
+margin-right: auto;
+display: flex;
+flex-direction: column;
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+padding: 20px;
+
+/*
+
+  Ou qualquer outra largura 
+
+margin-left: 150px;
 right: 50px;
 margin-bottom: 30px;
+*/
 }
+
+
+
+
+
+
 
 .td1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -109,3 +199,35 @@ margin-bottom: 30px;
             color: #4CAF50;
             line-height: 1;
         }
+
+    .rodape{ 
+    background-color: rgb(40, 40, 92);
+    padding: 10px;
+    color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    flex-wrap: wrap-reverse;
+    flex-direction: row-reverse;
+
+    justify-content: center;
+    justify-content: space-between ;
+
+    
+}
+    
+    .rodape-1{
+    background: #7f69de;
+    width: 50%;
+    text-align: right;
+ }
+    .rodape-2{
+    background: #7054ed;
+    width: 50%;
+    text-align: left;
+  
+    }
